[project]
name = "agenticAI"
version = "1.0.0"
description = ""
authors = [
    {name = "Manish Dhull"}
]
readme = "README.md"
requires-python = ">3.11"
dependencies = [
    "langgraph (>=0.5.4,<0.6.0)",
    "langchain-core (>=0.3.72,<0.4.0)",
    "langchain-openai (>=0.3.28,<0.4.0)",
    "openai (>=1.97.1,<2.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "streamlit (>=1.47.1,<2.0.0)",
    "langgraph-checkpoint-sqlite (>=2.0.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
